# SNB-Data-Streamliner

./: .gitignore  LICENSE  README.md  pyproject.toml
metadata/: cubes_list.csv
src/: __main__.py  extractor.py
